Updating the README.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 		</div>
 
 		<div id="footer">
-			<p>A tool created by <a href="http://gvsulib.com/labs" title="Grand Valley State University Libraries Labs"><abbr title="Grand Valley State University">GVSU</abbr> Library Labs</a> |
+			<p>A tool originally created by <a href="http://gvsulib.com/labs" title="Grand Valley State University Libraries Labs"><abbr title="Grand Valley State University">GVSU</abbr> Library Labs</a> |
 			Modified by <abbr title="Bowling Green State University">BGSU</abbr> Library <abbr title="Information Technology Services">ITS</abbr></p>
 		</div>
 
