Fixing the Only items from my libraries catalog checkbox.

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <div id="insertterms"></div>
 <div id="fulltexttoggle">&lt;input type="hidden" name="s.fvf[]" value="IsFullText,true" /&gt;</div>
 <div id="isscholarlytoggle">&lt;input type="hidden" name="s.fvf[]" value="IsScholarly,true" /&gt;</div>
-<div id="incatalogtoggle">&lt;input type="hidden" name="s.fq[]" value="SourceType:('Library Catalog')" /&gt;</div>
+<div id="incatalogtoggle">&lt;input type="hidden" name="s.fq[]" value='SourceType:("Library Catalog")' /&gt;</div>
 <div id="insertdate"></div>
 </div>
 &lt;input type="submit" value="Search" /&gt;<br />
